--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,12 @@
 *.war
 *.ear
 
+#intelliJ files
+.idea
+*.iml
+out/
+*.classpath
+*.project
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
